@@ -11,6 +11,10 @@ Since 0.5rc2
  * Fix a bug with Gemv and Ger on CPU, when used on vectors with negative
    strides. Data was read from incorrect (and possibly uninitialized)
    memory space. This bug was probably introduced in 0.5rc1.
+ * The Theano flag "nvcc.flags" are now included in the hard part of the key.
+   This mean that now we recompile all modules for each value of "nvcc.flags".
+   This do use change the default, but if you used this flags, it was ignored
+   for module already compiled.
 
 =============
 Release Notes
